Chapter 5: setup db connection and flyway migrations

--- a/src/main/resources/app-local.conf
+++ b/src/main/resources/app-local.conf
@@ -1,2 +1,3 @@
-dbUsername = asdf
-dbPassword = qwer
+dbUser = ""
+dbPassword = ""
+dbUrl = "jdbc:h2:./build/local;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;"
