Chapter 9: ktor-server-auth, add login form, authenticated routes

--- a/src/main/resources/app.conf
+++ b/src/main/resources/app.conf
@@ -3,3 +3,8 @@ dbUser = null
 dbPassword = null
 dbUrl = null
 useFileSystemAssets = false
+useSecureCookie = true
+// Generate key with KeyGenerator
+cookieEncryptionKey = ""
+// Generate key with KeyGenerator
+cookieSigningKey = ""
